--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,21 +1,10 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",           
-        "use": "@vercel/node",
-        "config": {
-          "includeFiles": [
-            "dist/**"               
-          ]
+
+    "version":2,
+    "routes":[
+        {
+            "src":"/(.*)",
+            "dest":"index.js"
         }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",              
-        "dest": "/index.js"
-      }
     ]
-  }
-  
+}
