--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,21 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
+  "version":2,
+  "builds":[
+    {
+      "src":"index.js",
+      "use":"@vercel/node",
+      "config":{
+        "includeFiles":[
+
+          "dist/**"
+        ]
       }
-    ]
-  }
-  
+    }
+  ],
+  "routes": [
+    {
+      "src":"/(.*)",
+      "dest":"index.js"
+    }
+  ]
+}
