--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb://aaryankamdar:aaryan14@cluster0.s09a9.mongodb.net
+MONGODB_URI=mongodb+srv://aaryankamdar:aaryan14@cluster0.s09a9.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster0
+
 
 CLOUDINARY_API_KEY=797371117958778
 CLOUDINARY_SECRET_KEY=MryL-AvNf2sCInx2v8gwSFoKS9g
